--- a/_less/index.less
+++ b/_less/index.less
@@ -32,7 +32,7 @@
 				color: @link-hover;
 				&:hover {
 
-					color: @link-color;
+					color: @secondary-color;
 				}
 			}
 		}
@@ -73,7 +73,7 @@
 			>span {
 				.font-size(3);
 				opacity: 1;
-				color: @egg-shell;
+				color: #fff;
 				line-height: 1;
 			}
 		}
@@ -128,7 +128,7 @@
 		display: block;
 		// .font-size(1*@second-modular);
 		.base(margin,top,1*@first-modular);
-		color: @egg-shell;
+		color: @accent-color;
 		font-weight: bold;
 		opacity: .95;
 		&:hover {
@@ -157,13 +157,16 @@
 			float: left;
 			.base(margin,top,3*@first-modular);
 		}
+		.container::after {
+			.clear-float;
+		}
 	}
 }
 
 #final-cta {
 	// height: 50vh;
 	text-align: center;
-	background-color: @desire-red;
+	background-color: @pewter-blue;
 	color: #fff;
 	display: flex;
 	justify-content: center;
